--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="{{assetsBaseUrl}}css/font-awesome.min.css">
-    <link rel="stylesheet" href="{{assetsBaseUrl}}css/mozaik.css">
+    <link type="text/css" rel="stylesheet" href="{{assetsBaseUrl}}css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="{{assetsBaseUrl}}css/mozaik.css">
     <title>{{ appTitle }}</title>
 </head>
 <body>
