create progress bar

--- a/src/styl/mozaik.styl
+++ b/src/styl/mozaik.styl
@@ -15,6 +15,7 @@
 @require 'components/treemap'
 @require 'components/pie'
 @require 'components/bar-chart'
+@require 'components/progress-bar'
 @require 'components/inspector'
 @require 'components/notifications'
 @require 'components/connection-status'
