--- a/src/styl/components/progress-bar.styl
+++ b/src/styl/components/progress-bar.styl
@@ -4,7 +4,7 @@
     left 50%
     transform translateX(-50%)
     overflow hidden
-    border-radius 5px
+    border-radius 0.5em
     width  90%
     height 2em
   
