change camembert to chart

--- a/src/styl/mozaik.styl
+++ b/src/styl/mozaik.styl
@@ -16,7 +16,7 @@
 @require 'components/pie'
 @require 'components/bar-chart'
 @require 'components/progress-bar'
-@require 'components/camembert'
+@require 'components/chart'
 @require 'components/inspector'
 @require 'components/notifications'
 @require 'components/connection-status'
