modify chart open ticket

--- a/src/styl/components/graphic.styl
+++ b/src/styl/components/graphic.styl
@@ -1,4 +1,7 @@
-.camembert
-  &_chart
-    font $main-font
-    color $main-txt-color
+.graphic
+  &__container
+    background-color green
+  &__chart
+    background-color blue
+  &__legend
+    background-color red
