--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{assetsBaseUrl}}css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{assetsBaseUrl}}css/mozaik.css">
+    <link rel="icon" type="image/png" href="{{assetsBaseUrl}}imgs/logo_bar.png">
     <title>{{ appTitle }}</title>
 </head>
 <body>
